--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pypdf==6.2.0
 dotenv==0.9.9
 psycopg2-binary==2.9.11
 google-cloud-storage==3.5.0
+google-auth==2.41.1 
+google-auth-httplib2==0.2.1 
+google-auth-oauthlib==1.2.3
